--- a/vignettes/Week7_Spatial_Linear_Models/Week7_vignette.Rmd
+++ b/vignettes/Week7_Spatial_Linear_Models/Week7_vignette.Rmd
@@ -45,6 +45,7 @@ library(LandGenCourse)
 #require(nlme)
 #require(lattice)
 #require(MuMIn)
+library(spatialreg)
 library(ggplot2)
 library(ggmap)
 source(system.file("extdata", "panel.cor.r", 
@@ -124,10 +125,11 @@ There are three types of stamen maps: terrain, toner (black and white), and wate
 
 Let's see what a 'toner' map would look like:
 
-```{r}
-ggmap::ggmap(get_stamenmap(bbox, maptype = "toner", zoom=12)) + 
+```{r message=FALSE}
+ggmap::ggmap(get_stamenmap(bbox, maptype = "toner", zoom=12, force = TRUE)) + 
   geom_point(aes(x =  Longitude, y = Latitude), data = Dianthus.longlat@data, 
-             colour = "black", size = 2)
+             colour = "black", size = 2) 
+  
 ```
 
 ### c) Explore correlations
@@ -420,7 +422,7 @@ The line we are looking for is:  '- attr(*, "modelVariog")'. The attributes 'mod
 The notation attr(*, "modelVariog") is a cryptic way of telling us how to access the attribute: use the function 'attr' and provide two arguments: the object names 'Fitted.variog' (represented by the asterisk), and the name of the attribute, in quotes: 'attr(Fitted.variog, "modelVariog")'.
 
 ```{r}
-tibble::as.tibble(attr(Fitted.variog, "modelVariog"))
+tibble::as_tibble(attr(Fitted.variog, "modelVariog"))
 ```
 
 This is useful to know if you want to create your own figures, e.g. with 'ggplot2'.
@@ -442,11 +444,11 @@ The method 'errorsarlm' fits a simultaneous autoregressive model ('sar') to the 
 This approach is based on spatial neighbours and weights. We have already defined them in three versions of a 'listw' object. Let's see which one fits the data best.
 
 ```{r}
-mod.sar.IBR.gab <- spdep::errorsarlm(A ~ PatchSize + IBR, data = Dianthus.df, 
+mod.sar.IBR.gab <- spatialreg::errorsarlm(A ~ PatchSize + IBR, data = Dianthus.df, 
                                  listw = listw.gab)
-mod.sar.IBR.d1 <- spdep::errorsarlm(A ~ PatchSize + IBR, data = Dianthus.df, 
+mod.sar.IBR.d1 <- spatialreg::errorsarlm(A ~ PatchSize + IBR, data = Dianthus.df, 
                                  listw = listw.d1)
-mod.sar.IBR.d2 <- spdep::errorsarlm(A ~ PatchSize + IBR, data = Dianthus.df, 
+mod.sar.IBR.d2 <- spatialreg::errorsarlm(A ~ PatchSize + IBR, data = Dianthus.df, 
                                  listw = listw.d2)
 
 MuMIn::model.sel(mod.lm.IBR, mod.sar.IBR.gab, mod.sar.IBR.d1, mod.sar.IBR.d2) 
@@ -536,7 +538,7 @@ meigw  <- spmoran::meigen( cmat = cmat.d1 )
 sfw.res <- spmoran::esf( y=Dianthus.df$A, x=Dianthus.df[,c("PatchSize", "IBR")],
                        meig=meigw, fn = "r2" )
 sfw.res$b
-tibble::as.tibble(sfw.res$r)
+tibble::as_tibble(sfw.res$r)
 sfw.res$e
 ```
 
@@ -598,7 +600,7 @@ The previous model selected 15 MEM spatial eigenvectors, and thus fitted 15 addi
 sfr.res <- spmoran::resf( y=Dianthus.df$A, x=Dianthus.df[,c("PatchSize", "IBR")], 
                meig = meigw, method = "reml" ) 
 sfr.res$b
-tibble::as.tibble(sfr.res$r)
+tibble::as_tibble(sfr.res$r)
 sfr.res$e
 sfr.res$s
 ```
@@ -607,10 +609,10 @@ As in Week 6 lab, the conditional R-squared is the variance explained by the fix
 
 Note: we can't compare AIC with the previous models, as the model was fitted with 'reml'.
 
-We get an additional output 'sfr.res$s' with two parameters: 
+We get an additional output 'sfr.res$s' with two variance parameters: 
 
-- **shrink_sf_SE**: when squared, this tells us how much variance was captured by the MEM eigenvectors. 
-- **shrink_sf_alpha**: this give an indication of the spatial scale of the observed pattern. A value above 1 would indicate large-scale spatial structure. Here it seems to be a finer-scale pattern overall.
+- **spcomp_SE**: standard error of the spatial component. 
+- **spcomp_Moran.I/max(Moran.I)**: Moran's I of the spatial component, rescaled by the maximum possible value. From the help file: "Based on Griffith (2003), the scaled Moran'I value is interpretable as follows: 0.25-0.50:weak; 0.50-0.70:moderate; 0.70-0.90:strong; 0.90-1.00:marked." 
 
 ## 7. Fit spatially varying coefficients model with package 'spmoran'
 
@@ -627,7 +629,7 @@ We fit the model with 'resf_vc'.
 ```{r}
 rv_res <- spmoran::resf_vc( y=Dianthus.df$A, 
                             x = Dianthus.df[,c("PatchSize", "IBR")], 
-                            xconst = NULL, meig = meigw, method = "reml" )
+                            xconst = NULL, meig = meigw, method = "reml", allsvc=TRUE)
 ```
 
 Instead of one slope estimate for each predictor, we now get a different estimate for each combination of parameter and site (sounds like overfitting?). Here's a summary of the distbiution of these estimates.
@@ -636,7 +638,7 @@ Instead of one slope estimate for each predictor, we now get a different estimat
 summary( rv_res$b_vc ) 
 ```
 
-The slope estimate for PatchSize varied between -0.0056 and 0.098, with a mean of 0.046. The slope estimate for the 'IBR' term varied between -0.805 and 0.348, with a mean of -0.01! That is an astounding range of variation. Keep in mind that we really expect a positive relationship, there is no biological explanation for a ngeative relationship. 
+The slope estimate for PatchSize varied between 0 and 0.098, with a mean of 0.046. The slope estimate for the 'IBR' term varied between -0.81 and 0.34, with a mean very close to 0! That is an astounding range of variation. Keep in mind that we really expect a positive relationship, there is no biological explanation for a ngeative relationship. 
 
 Here is a similar summary of the p-values:
 
@@ -683,10 +685,10 @@ Keep in mind that 'IBR' and 'PatchSize' showed a strong correlation. The paramet
 ```{r}
 rv_res <- spmoran::resf_vc( y=Dianthus.df$A, 
                             x = Dianthus.df[,c("IBR")], 
-                            xconst = NULL, meig = meigw, method = "reml" )
+                            xconst = NULL, meig = meigw, method = "reml", allsvc=TRUE)
 summary( rv_res$b_vc ) 
 ```
-Now the range of slope estimates is smaller, most sites have a positive estimate.
+Now the range of slope estimates is smaller, most sites have a positive estimate, and the mean is approx. 0.21.
 
 ```{r}
 summary( rv_res$p_vc ) 
